get children by level